feat(observability): 本地启动调整