@@ -34,6 +34,7 @@
         <log4j2.version>2.23.1</log4j2.version>
         <snakeyaml.version>2.2</snakeyaml.version>
         <lombok.version>1.18.38</lombok.version>
+        <opentelemetry.version>1.51.0</opentelemetry.version>
 
         <!-- Runtime Deps for Testing -->
         <mockito.version>5.18.0</mockito.version>
@@ -241,6 +242,14 @@
                 <version>${lombok.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-bom</artifactId>
+                <version>${opentelemetry.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -426,6 +435,7 @@
                         <include>**/*Tests.java</include>
                     </includes>
                     <skipTests>${skipUTs}</skipTests>
+                    <argLine>--enable-native-access=ALL-UNNAMED @{argLine}</argLine>
                 </configuration>
             </plugin>
 
